# Mater-Browser

./: .gitignore  README.md  SELECTOR_ANALYSIS_REPORT.md  SELECTOR_UPDATE_ACTION_PLAN.md  _dispatch_prompt.txt  _dispatch_prompt_phase2.txt  analyze_dom.py  apply.py  dom_analysis.txt  dump_all.py  dump_selectors.py  gui.py  main.py  pyproject.toml  requirements.txt  run.py
.claude/: steering.md
config/: answers.yaml  filters.yaml  profile.yaml  settings.yaml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  SELECTOR_UPDATE_2026.md  STRUCT.md
scripts/: process_failures.py  start_chrome.bat
src/: __init__.py  movestuckdetectionfiles.py
src/agent/: __init__.py  actions.py  answer_engine.py  application.py  claude.py  dom_extractor.py  external_flow.py  form_processor.py  indeed_form_filler.py  indeed_helpers.py  linkedin_flow.py  linkedin_form_filler.py  loop_detector.py  models.py  navigation_helpers.py  page_classifier.py  payment_blocker.py  prompts.py  stuck_detection.py  success_detector.py  visibility_helpers.py  vision_fallback.py  zero_actions_handler.py
src/ats/: __init__.py  base_handler.py  detector.py  fallback.py  field_mapper.py  registry.py
src/automation/: __init__.py  runner.py  search_generator.py
tests/: test_failureloggerintegration.py  test_fixpagesparam.py  test_formprocessorstuckdetection.py  test_indeedformfiller.py  test_linkedindirectselector.py  test_movestuckdetectionfiles.py  test_p0bugfixes.py  test_p1missingpatterns.py  test_p1threadsafety.py  test_payment_blocker.py  test_smartrecruitershandler.py  test_stuck_detection.py
(+49 files in other folders)
